# AuthService

./: .env_example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
config/: nginx.conf
src/: alembic.ini  main.py
src/alembi_migrations/: env.py
src/api/v1/: auth.py  roles.py  users.py
src/core/: config.py  exceptions.py
src/db/: postgres.py  redis_db.py
src/migrations/: env.py
src/models/: history.py  users.py
src/schemas/: users.py
src/services/: auth.py  common.py  roles.py  tokens.py  users.py
src/tests/: test_roles.py
