[tool.poetry]
name = "authservice"
version = "0.1.0"
description = ""
authors = ["Кирилл Петухов <test@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "2.0.22"
fastapi = "0.100.1"
redis = "5.0.1"
pydantic = "2.1.1"
werkzeug = "3.0.0"
alembic = "^1.12.0"
uvicorn = "^0.23.2"
asyncpg = "^0.28.0"
greenlet = "^3.0.0"
pydantic-settings = "2.0.2"
orjson = "^3.9.9"
async-fastapi-jwt-auth = "0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
